--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="STRILL VIDS OFFICIAL WEBSITE" />
-    <link rel="stylesheet" href="http://192.168.191.1:8081/privCdn/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="http://192.168.191.1:8081/privCdn/fontawesome/css/all.css">
-    <link rel="stylesheet" href="http://192.168.191.1:8081/privCdn/fontawesome/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.clou dflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/v4-shims.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
